--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,103 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+  .title1 {
+    font-size: 35px;
+    font-weight: 900;
+    line-height: 1.2;
+  }
+
+  .title2 {
+    font-size: 30px;
+    font-weight: 900;
+    line-height: 1.25;
+  }
+
+  .subtitle1 {
+    font-size: 22px;
+    font-weight: 700;
+    line-height: 1.3;
+  }
+
+  .subtitle2 {
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 1.35;
+  }
+
+  .button1 {
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 1.35;
+  }
+
+  .button2 {
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1.35;
+  }
+
+  .body1 {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.6;
+  }
+
+  .body2 {
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 1.65;
+  }
+}
+
+@media (min-width: 768px) {
+  .title1 {
+    font-size: 42px;
+    font-weight: 900;
+    line-height: 1.2;
+  }
+
+  .title2 {
+    font-size: 35px;
+    font-weight: 900;
+    line-height: 1.2;
+  }
+
+  .title3 {
+    font-size: 30px;
+    font-weight: 900;
+    line-height: 1.25;
+  }
+
+  .subtitle1 {
+    font-size: 26px;
+    font-weight: 700;
+    line-height: 1.3;
+  }
+
+  .subtitle2 {
+    font-size: 22px;
+    font-weight: 700;
+    line-height: 1.3;
+  }
+
+  .subtitle3 {
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 1.35;
+  }
+
+  .button1 {
+    font-size: 18px;
+  }
+
+  .button2 {
+    font-size: 16px;
+  }
+}
+
+
 :root {
 
 }
