design: breakpoint별 layout 설정

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -100,13 +100,14 @@
 
 
 :root {
-
+  min-height: 100%;
 }
 
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  height: 100%;
 }
 
 body {
